--- a/contactus.css
+++ b/contactus.css
@@ -1,7 +1,7 @@
 body{
-    background: linear-gradient(120deg,#89C4E1,#B08BBB);
+    background: linear-gradient(120deg,#C780FA,#8EA7E9);
+    color: #fff;
 }
-
 hr{
     
     border-style: dotted none none; 
