--- a/info.css
+++ b/info.css
@@ -4,7 +4,7 @@ h1{
     font-size: 40px;
 }
 body{
-    background: linear-gradient(120deg,#89C4E1,#B08BBB);
+    background: linear-gradient(120deg,#C780FA,#8EA7E9);
     align-items: center;
     color: #fff;
 }
