--- a/profile.css
+++ b/profile.css
@@ -5,8 +5,7 @@
 }
 body{
     margin-top: 20px;
-    background: linear-gradient(120deg,#F3CCFF,#82AAE3);
-}
+    background: linear-gradient(120deg,#C780FA,#8EA7E9);}
 .main{
     padding: 15px;
     font-family: sans-serif;
@@ -23,8 +22,8 @@ body{
     font-size: 16px;
 }
 .sidebar{
-    background: linear-gradient(120deg,#F3CCFF,#82AAE3);
-    color: white;
+    background: linear-gradient(120deg,#C780FA,#8EA7E9);
+        color: white;
     height: 100%;
 }
 .sidebar a{
@@ -43,8 +42,8 @@ body{
 .container{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(120deg,#F3CCFF,#82AAE3);
-    height: 100vh;
+    background: linear-gradient(120deg,#C780FA,#8EA7E9);
+        height: 100vh;
     overflow: hidden;
 }
 .mt-3 a{
